manifests/gitea/gitea.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitea
  name: gitea-app
  labels:
    app: gitea
spec:
  selector:
    matchLabels:
      app: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.11
        ports:
        - containerPort: 3000
          name: gitea-http
        - containerPort: 22
          name: gitea-ssh
        volumeMounts:
        - mountPath: /data
          name: git-data
          readOnly: false
      nodeSelector:
        kubernetes.io/arch: amd64
      securityContext:
        fsGroup: 1000
      volumes:
        - name: git-data
          persistentVolumeClaim:
            claimName: storage-gitea
---
kind: Service
apiVersion: v1
metadata:
  namespace: gitea
  name: gitea
  labels:
    app: gitea
spec:
  selector:
    app: gitea
  ports:
  - name: gitea-http
    port: 3000
    targetPort: gitea-http
  - name: gitea-ssh
    port: 3022
    targetPort: gitea-ssh
    protocol: TCP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  tls:
  - hosts:
    - gitea.bik8s.home
  rules:
  - host: gitea.bik8s.home
    http:
      paths:
        - path: /
          backend:
            serviceName: gitea
            servicePort: 3000
