manifests/gitea/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gitea
  name: gitea-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea-db
  template:
    metadata:
      name: gitea-db
      labels:
        app: gitea-db
    spec:
      containers:
      - name: postgres
        image: postgres:latest
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: data # important so it gets mounted properly
          name: git-db-data
      securityContext:
        fsGroup: 1000
      volumes:
        - name: git-db-data
          persistentVolumeClaim:
            claimName: storage-gitea-db
---
kind: Service
apiVersion: v1
metadata:
  namespace: gitea
  name: gitea-db-service
spec:
  ports:
  - port: 5432
  selector:
    app: gitea-db
  clusterIP: None
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea-db-network-policy
  namespace: gitea
spec:
  podSelector:
    matchLabels:
      app: gitea-db
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: gitea
    ports:
    - protocol: TCP
      port: 5432
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: gitea
    ports:
    - protocol: TCP
      port: 5432
